# Trabajo3_PC

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
models/: database.py  main.py  models.py  queries.py  scraper.py  seed.py
reports/: EC3-PC.docx
scraper_project/: __init__.py  dataset.py  features.py  plots.py
scraper_project/modeling/: predict.py  train.py
