[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "scraper_project"
version = "0.0.1"
description = "Proyecto EC3 de Programaci\u00f3n Cient\u00edfica"
authors = [
  { name = "Vicente Castro, Mayckol Olivares" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "==3.12.13"


[tool.ruff]
line-length = 99
src = ["scraper_project"]
include = ["pyproject.toml", "scraper_project/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["scraper_project"]
force-sort-within-sections = true

